# PackUI

./: .babelrc  .gitignore  .prettierignore  .prettierrc.json  .yarnrc.yml  README.md  crowdin.yml  electron-builder.yml  next.config.js  package.json  tailwind.config.js  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.run/: Build (all).run.xml  Build (current platform).run.xml  Build (linux).run.xml  Build (mac).run.xml  Build (win32).run.xml  Build (win64).run.xml  Dev.run.xml  dev.bat
.yarn/patches/: electron-log-npm-5.0.0-beta.24-51cd918624.patch
app/: globals.css  layout.tsx  page.tsx
app/components/: downloadcard.tsx  mapcard.tsx  navbar.tsx  packcard.tsx  progress.tsx
app/download/: page.tsx
app/editor/: page.tsx
app/settings/: page.jsx  page.tsx
app/types/: settings.d.ts  song.d.ts  types.d.ts
config/: PackUI.config.json
languages/: de_DE.json  en_PT.json  en_US.json  ko_KR.json  ko_KR.lang  lol_US.json  nl_NL.json  ru_RU.json  zh_CN.json
main/: background.ts  communicationHandler.ts  imageServer.ts
main/classes/: pack.ts  song.ts
main/helpers/: Translator.ts  colors.ts  config.ts  createWindow.ts  (+4 more)
renderer/: next.config.js  postcss.config.js  tailwind.config.js  tsconfig.json
resources/: icon.icns
schemas/: PackUI.config.schema.json  PackUI.download.schema.json  packUI.Download.schema.json  packUI.config.schema.json  packUI.download.schema.json
tauri/: .gitignore  .taurignore  Cargo.toml  packUI.config.json  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: main.rs  packUI.config.json  types.rs
(+24 files in other folders)
