[package]
name = "packui"
version = "0.1.0"
description = "AdofaiCSL pack manager for adofai "
authors = ["Thijnmens"]
license = "CC BY-NC-SA 4.0"
repository = "https://github.com/thijnmens/PackUI"
default-run = "packui"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["dialog-open", "fs-all", "protocol-asset"] }
regex = "1.8.1"
jsondata = "0.8.1"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
